# ST

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.api  README.md  pyproject.toml  rules.md
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 1ac50e58dbdb_initial_schema.py  4b7d0f8e2c6a_coros_full_sync_tables.py  b9c2e41a6f0d_activity_detail_fit_tables.py  (+2 more)
app/: db.py  main.py  models.py  schemas.py  seed.py
app/api/: auth.py  routes.py
docs/: api-frontend-contract.md  prd-coros-marathon-mvp.md  technical-design-coros-marathon-mvp.md  web-design-context.md  web-design-dashboard.md
fly/: api.toml  web.toml
scripts/: analyze_coros_bundles.py  analyze_past_plan.py  build_template_library.py  coros_cleanup_fake_data.py  coros_db_inspect.py  coros_detail_probe.py  coros_export_activity_sample.py  coros_export_file_probe.py  coros_import_fetch_file.py  coros_import_fit_export.py  coros_real_fetch_probe.py  extract_past_plans.py  fly_setup.sh  probe_coros_api.py  probe_coros_history.py  probe_coros_training_hub.py  reset_environment_data.py  st_cli.py
tasks/: devlog.md  lessons.md  todo.md
tests/: helpers.py  test_auth.py  test_beginner_skill.py  test_block_a.py  test_block_a1.py  test_block_e.py  test_calendar.py  test_coros_fit_parser.py  test_coros_full_sync.py  test_coros_marathon_mvp.py  test_history_assessment.py  test_real_coros_client.py  test_reset_environment_data.py
web/: .dockerignore  .gitignore  Dockerfile  middleware.ts  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.setup.ts
(+151 files in other folders)
