[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "st"
version = "0.1.0"
description = "PerformanceProtocol endurance training planner backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "playwright>=1.45.0,<2.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "sqlalchemy>=2.0.30,<3.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "openai>=1.0.0,<2.0.0",
  "pyyaml>=6.0,<7.0",
  "alembic>=1.13.0,<2.0.0",
  "psycopg[binary]>=3.1.0,<4.0.0",
  "fitparse==1.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app.skills.marathon_st_default" = ["*.md", "*.yaml"]
"app.skills.marathon_st_default.code" = ["*.md"]
"app.skills.user_extracted.coach_zhao_unified" = ["*.md", "*.yaml"]
"app.skills.user_extracted.coach_zhao_unified.code" = ["*.md"]
"app.skills.user_extracted.coach_zhao_unified.data" = ["*.json"]
